# VOIDNET

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dns_smoke_test.sh  go.work
apps/void-browser/: Cargo.toml  tauri.conf.json
apps/void-browser/capabilities/: default.json
apps/void-browser/src/: lib.rs  main.rs
apps/void-browser/ui/: app.css  app.js  index.html
apps/void-chat/: Cargo.toml
apps/void-chat/src/: lib.rs  main.rs
apps/void-chat/surfaces/: chat.surface
apps/void-cli/: Cargo.toml
apps/void-cli/src/: console.rs  main.rs
apps/void-node/: Cargo.toml
apps/void-node/src/: main.rs
apps/void-node/tests/: local_mesh.rs
core/dns/: Cargo.toml
core/dns/src/: lib.rs
core/identity/: Cargo.toml
core/identity/src/: lib.rs
core/protocol/: Cargo.toml
core/protocol/src/: lib.rs  ui.rs
core/runtime/: Cargo.toml
core/runtime/src/: lib.rs
core/runtime/src/ui/: mod.rs
core/runtime/surfaces/: gateway.surface
core/storage/: Cargo.toml
core/storage/src/: lib.rs
core/transport/: Cargo.toml
core/transport/src/: event.rs  lib.rs  lifecycle.rs  node.rs  topology.rs
core/transport/tests/: lifecycle_topology.rs
docs/architecture/: distributed-event-bus.md  distributed-state.md  identity.md  node-lifecycle.md  overview.md  philosophy.md  runtime-philosophy.md  system-layer-model.md  threat-model.md  transport-philosophy.md  trust-flow.md  voiddns.md
docs/operations/: live-mesh-observability.md  runtime-shell.md  secure-peer-communication.md  voiddns-routing.md
docs/protocol/: void-protocol-v1.md  void-ui.md
docs/rfc/: 0001-network-foundation.md  0001-void-protocol.md  0002-voiddns.md  0003-void-identity.md  0004-runtime-permissions.md  0005-distributed-state.md  0006-transport-layer.md  0007-event-bus.md  README.md
docs/roadmap/: phase-1.md
examples/void-ui/: core.vui
labs/: README.md
labs/browser-shell/: README.md
labs/chat-sync/: README.md
labs/distributed-rooms/: README.md
labs/dns-conflicts/: README.md
labs/dns-propagation/: README.md
labs/encrypted-sessions/: README.md
labs/gateway-browser/: README.md
labs/gateway-fetch/: README.md
labs/gateway-routing/: README.md
labs/gateway-runtime/: README.md
labs/gateway-trust/: README.md
labs/graphical-runtime/: README.md
labs/hole-punch/: README.md
labs/http-bridge/: README.md
labs/http-bridge-runtime/: README.md
labs/latency-tests/: README.md
labs/network-recovery/: README.md
labs/presence-propagation/: README.md
labs/real-mesh/: SMOKE.md
labs/reconnect-tests/: README.md  restart-peer.sh
labs/resource-mounting/: README.md
labs/response-surfaces/: README.md
labs/runtime-coordination/: README.md
labs/runtime-negotiation/: README.md
labs/runtime-recovery/: README.md
labs/runtime-render-bridge/: README.md
labs/runtime-routing/: README.md
labs/runtime-shell/: README.md
labs/secure-chat/: README.md
labs/surface-mounting/: README.md
labs/swarm-simulator/: README.md  run-three-node.sh  run-two-node.sh
labs/terminal-console/: SMOKE.md
labs/topology-visualiser/: README.md  render.sh
labs/transport-chaos/: README.md  bootstrap-recovery.sh
labs/wan-relay/: README.md
scripts/: run-void-browser.sh
scripts/wan/: connect-client.sh  smoke-check.sh  start-bootstrap-relay.sh
sdk/go/: go.mod  voidnet.go  voidnet_test.go
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
