[workspace]
resolver = "2"
members = [
  "apps/void-browser",
  "apps/void-chat",
  "apps/void-cli",
  "apps/void-node",
  "core/dns",
  "core/identity",
  "core/protocol",
  "core/runtime",
  "core/storage",
  "core/transport",
  "sdk/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["VOIDNET Contributors"]
repository = "https://void.invalid/voidnet"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3"
libp2p = { version = "0.54", features = ["tokio", "quic", "noise", "yamux", "identify", "ping", "kad", "request-response", "gossipsub", "mdns", "relay", "dcutr", "autonat", "macros"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
sled = "0.34"
thiserror = "1.0"
tokio = { version = "1.40", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x25519-dalek = "2.0"
