[package]
name = "void-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
libp2p.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
void-identity = { path = "../../core/identity" }
void-protocol = { path = "../../core/protocol" }
x25519-dalek.workspace = true
  
