[package]
name = "void-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "void"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = "0.28"
ratatui = "0.29"
serde_json.workspace = true
tokio.workspace = true
void-chat = { path = "../void-chat" }
void-dns = { path = "../../core/dns" }
void-identity = { path = "../../core/identity" }
void-protocol = { path = "../../core/protocol" }
void-runtime = { path = "../../core/runtime" }
void-transport = { path = "../../core/transport" }

[[bin]]
name = "voidnet"
path = "src/bin/voidnet.rs"

[[bin]]
name = "void"
path = "src/main.rs"
