[package]
name = "voidnet-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
void-dns = { path = "../../core/dns" }
void-identity = { path = "../../core/identity" }
void-protocol = { path = "../../core/protocol" }
void-runtime = { path = "../../core/runtime" }
